--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 .header__logo {
     width: 227px;
     height: 65px;
+    object-fit: contain;
 }
 
 .header__list {
@@ -60,6 +61,7 @@ body {
     line-height: 160%;
     color: rgba(0, 0, 0, 0.7);
     cursor: pointer;
+    text-align: center;
 }
 
 .header__item--active {
@@ -101,7 +103,6 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    
     border-radius: 68px;
     z-index: -1;
 }
@@ -227,6 +228,12 @@ body {
     height: 60px;
     border-radius: 50%;
     background-color: #FFFFFF;
+    opacity: 0.2;
+    transition: all 0.2s ease-in-out;
+}
+
+.nav-buttons__btn:hover {
+    opacity: 1;
 }
 
 .nav-buttons__btn svg {
@@ -240,3 +247,4 @@ body {
 #prev:hover svg{
     transform: translateX(-7px);
 }
+
